# isopatric

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/isopatric/: isopatric.cpp  isopatric.h  pch.h
src/isopatric/core/: Application.cpp  Application.h  Assert.h  Base.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h
src/isopatric/event/: Event.h  EventQueue.h  KeyEvent.h  MouseEvent.h  WindowEvent.h
src/isopatric/event/sdl/: EventQueue.cpp  EventQueue.h
src/isopatric/file/: AssetReader.cpp  AssetReader.h
src/isopatric/input/: Input.h  KeyCode.h  MouseCode.h
src/isopatric/input/sdl/: Input.cpp  Input.h
src/isopatric/math/: Math.cpp  Math.h  Matrix.cpp  Matrix.h  Vector.cpp  Vector.h
src/isopatric/render/: Camera.cpp  Camera.h  IndexBuffer.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  RenderCommand.h  RenderContext.h  Renderer.cpp  Renderer.h  RendererAPI.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h
src/isopatric/render/opengl/: IndexBuffer.cpp  IndexBuffer.h  RenderContext.cpp  RenderContext.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/isopatric/ui/: UILayer.cpp  UILayer.h
src/isopatric/window/: Window.cpp  Window.h  window.cpp
src/isopatric/window/sdl/: Window.cpp  Window.h
src/playground/: playground.cpp
src/playground/assets/shaders/: Base.glsl
